--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "@electron-forge/cli": "^6.0.0-beta.61",
     "electron": "^16.0.4"
+  },
+  "dependencies": {
+    "yarn": "^1.22.17"
   }
 }
